k3s/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: dashboard-network
  labels:
    app: homepage
spec:
  type: LoadBalancer
  selector:
    app: homepage
  ports:
    - port: 8800
      targetPort: 3000
      protocol: TCP
