k3s/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: dashboard-network
  labels:
    app: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - homepage.home.ijlalahmad.dev
      secretName: wildcard-home-ijlalahmad-dev-tls
  rules:
    - host: homepage.home.ijlalahmad.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 8800
